--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.0",
     "vite": "^7.1.0",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-plugin-pwa": "^1.0.2",
+    "vite-tsconfig-paths": "^5.1.4",
+    "workbox-window": "^7.3.0"
   }
 }
